--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 			<section id="four" class="main style1 special">
 				<div class="container">
 				<header class="major">
-					<h2>Drop a line and Let's get right into it!</h2>
+					<h2>Leave a word and Let's get to work!</h2>
 				</header>
 				<form method="post" action="https://forms.un-static.com/forms/faa07d2c50ad3ad476978ee630f45aad7e6dd5ab">
 					<div class="row gtr-uniform gtr-50">
