--- a/index.html
+++ b/index.html
@@ -33,18 +33,28 @@
 		<!-- One -->
 			<section id="one" class="main style1">
 				<div class="container">
+					<header class="major">
+						<h2>About me</h2>
+					</header>
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
-							<header class="major">
-								<h2>Nice to meet you</h2>
-							</header>
-							<p>Adipiscing a commodo ante nunc accumsan et interdum mi ante adipiscing. A nunc lobortis non nisl amet vis sed volutpat aclacus nascetur ac non. Lorem curae et ante amet sapien sed tempus adipiscing id accumsan.</p>
+							<p>
+								Speaking of a quick introduction I would say skilled Data Analyst 
+								from the Czech Republic with a passion 
+								(a bit overused cliché among freelancers but genuinely true in my case)
+								for Mathematics, Statistics, Modelling and adrenaline sports.
+							</p>
+							<p>
+								Armed with Bachelor's and Master's degree, a fine collection of certificates and 
+								several years of hands-on experience in big corporations 
+								as well as small enterprises, I am the right person to reveal a story of your data.
+							</p>
+						</div>
+						<div class="col-6 col-12-medium imp-medium">
+							<span class="image fit"><img src="images/picture01.jpg" alt="" /></span>
 							<ul class="actions special">
 								<li><a href="#" class="button">Full story</a></li>
 							</ul>
-						</div>
-						<div class="col-6 col-12-medium imp-medium">
-							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
 						</div>
 					</div>
 				</div>
@@ -115,7 +125,7 @@
 
 		<!-- Four -->
 
-			<section id="four" class="main style1 special">
+			<section id="four" class="main style2 special">
 				<div class="container">
 				<header class="major">
 					<h2>Leave a word and Let's get to work!</h2>
