Awesome icons brands fix

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 		<!-- Header -->
 			<section id="header">
 				<div class="inner">
-					<span class="icon solid major fa-solid fa-solid fa-database">&nbsp;</span>					
-					<span class="icon solid major fa-solid fa-microchip">&nbsp;</span>
-					<span class="icon solid major fa-solid fa-solid fa-chart-line">&nbsp;</span>
+					<span class="icon solid major fa-database">&nbsp;</span>					
+					<span class="icon solid major fa-microchip">&nbsp;</span>
+					<span class="icon solid major fa-chart-line">&nbsp;</span>
 					<h1>Hi, I'm <strong>Patrik</strong>,<br />
 					the <strong>Data Analyst</strong> you are looking for. </h1>
 					<p>Step into the Realm where every Dataset is a story waiting to be told.</p>
@@ -39,7 +39,7 @@
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
 							<p>
-								Speaking of a quick introduction I would say skilled Data Analyst 
+								Speaking of a quick introduction, I would say skilled Data Analyst 
 								from the Czech Republic with a passion 
 								(a bit overused cliché among freelancers but genuinely true in my case)
 								for Mathematics, Statistics, Modelling and adrenaline sports.
@@ -67,7 +67,7 @@
 						<div class="col-6 col-12-medium">
 							<ul class="major-icons">
 								<li><span class="icon solid style1 major fa-code"></span></li>
-								<li><span class="icon solid style2 major fa-bolt"></span></li>
+								<li><span class="icon brands style2 major fa-python"></span></li>
 								<li><span class="icon solid style3 major fa-camera-retro"></span></li>
 								<li><span class="icon solid style4 major fa-cog"></span></li>
 								<li><span class="icon solid style5 major fa-desktop"></span></li>
@@ -437,6 +437,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
+			<script type="text/javascript" src="https://example.com/fontawesome/vVERSION/js/conflict-detection.js">
+			</script>
 	</body>
 </html>
