--- a/index.html
+++ b/index.html
@@ -68,20 +68,28 @@
 							<ul class="major-icons">
 								<li><span class="icon solid style1 major fa-database"></span></li>
 								<li><span class="icon brands style2 major fa-python"></span></li>
-								<li><span class="icon solid style3 major fa-code"></span></li>
-								<li><span class="icon solid style4 major fa-microchip"></span></li>
-								<li><span class="icon solid style5 major fa-chart-line"></span></li>
-								<li><span class="icon solid style6 major fa-person-chalkboard"></span></li>
+								<li><span class="icon solid style3 major fa-microchip"></span></li>
+								<li><span class="icon solid style4 major fa-person-chalkboard"></span></li>
 							</ul>
 						</div>
 						<div class="col-6 col-12-medium">
 							<header class="major">
-								<h2>Lorem ipsum dolor adipiscing<br />
-								amet dolor consequat</h2>
+								<h2>Services</h2>
 							</header>
-							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
-							<p>Blandit faucibus proin. Ac aliquam integer adipiscing enim non praesent vis commodo nunc phasellus cubilia ac risus accumsan. Accumsan blandit. Lobortis phasellus non lobortis dit varius mi varius accumsan lobortis. Blandit ante aliquam lacinia lorem lobortis semper morbi col faucibus vitae integer placerat accumsan orci eu mi odio tempus adipiscing adipiscing adipiscing curae consequat feugiat etiam dolore.</p>
-							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
+							<ul>
+								<li><strong>Data Cleaning and Preprocessing</strong> <br />
+									Ensure your data is accurate and ready for analysis.</li>
+								<li><strong>Data Analysis</strong> <br />
+									Uncover trends, patterns, and valuable insights.</li>
+								<li><strong>Data Visualization</strong> <br />
+									Create informative charts and graphs to convey findings effectively.</li>
+								<li><strong>Statistical Analysis</strong> <br />
+									Apply advanced statistical techniques to test hypotheses.</li>
+								<li><strong>Predictive Modeling</strong> <br />
+									Build models to forecast future trends.</li>
+								<li><strong>Dashboards</strong> <br />
+									Design and build dashboards to simplify reporting.</li>
+							</ul>
 						</div>
 					</div>
 				</div>
@@ -419,6 +427,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				</div>
 			</section>
 		-->
+
 		<!-- Footer -->
 			<section id="footer">
 				<ul class="icons">
