About me page finished, project pages created

--- a/index.html
+++ b/index.html
@@ -49,11 +49,15 @@
 								several years of hands-on experience in big corporations 
 								as well as small enterprises, I am the right person to reveal a story of your data.
 							</p>
+							<ul class="icons" align="center">
+								<li><a href="https://www.linkedin.com/in/patrik-nacovsky" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://www.upwork.com/freelancers/~013388ada8bbdce33e" target="_blank" class="icon brands fa-upwork"><span class="label">Upwork</span></a></li>
+							</ul>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
 							<span class="image fit"><img src="images/picture01.jpg" alt="" /></span>
 							<ul class="actions special">
-								<li><a href="#" class="button">Full story</a></li>
+								<li><a href="about_me.html" class="button">Full story</a></li>
 							</ul>
 						</div>
 					</div>
@@ -105,26 +109,26 @@
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
-							<h3>Project 1</h3>
+							<h3>Power BI dashboard</h3>
 							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
 							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="project_power_bi.html" class="button">More</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
-							<h3>Project 2</h3>
+							<h3>Basic data analysis</h3>
 							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
 							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="project_basic_analysis.html" class="button">More</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<h3>Project 3</h3>
+							<h3>Logistic regression</h3>
 							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
 							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="project_logit.html" class="button">More</a></li>
 							</ul>
 						</div>
 					</div>
@@ -431,8 +435,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		<!-- Footer -->
 			<section id="footer">
 				<ul class="icons">
-					<li><a href="https://www.linkedin.com/in/patrik-nacovsky" class="icon brands alt fa-linkedin"><span class="label">Twitter</span></a></li>
-					<li><a href="https://www.upwork.com/freelancers/~013388ada8bbdce33e" class="icon brands alt fa-upwork"><span class="label">Facebook</span></a></li>
+					<li><a href="https://www.linkedin.com/in/patrik-nacovsky" target="_blank" class="icon brands alt fa-linkedin"><span class="label">Twitter</span></a></li>
+					<li><a href="https://www.upwork.com/freelancers/~013388ada8bbdce33e" target="_blank" class="icon brands alt fa-upwork"><span class="label">Facebook</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
