Power BI project strat

--- a/project_power_bi.html
+++ b/project_power_bi.html
@@ -18,7 +18,7 @@
 		<!-- Header -->
 			<section id="header">
 				<div class="inner">
-					<h1>Power BI dashboard</h1>
+					<h1>Simple Power BI dashboard</h1>
 				</div>
 			</section>
 
@@ -28,12 +28,75 @@
 					<ul class="actions">
 						<li><a href="index.html#three" class="button">Back</a></li>
 					</ul>
+					<header class="major special">
+						<h2>Global bike seller</h2>
+					</header>
+					<p>
+						This is a quick overview of an easy-to-understand dashboard created for 
+						a distributor of bikes and equipment. It displays plots and statistics 
+						of Sales and Orders worldwide. All charts are interconnected and fully 
+						interactive. Only one slicer for year selection and three buttons 
+						ensure simple manipulation without the need for further instructions. 
+						The design is straightforward, focusing on clarity and intuitiveness. 
+						Furthermore, such simplicity enables great potential for graphical 
+						customization tailored to your needs, transforming the dashboard into 
+						a stunning visual experience in the very next step.
+					</p>
+					<div class="row gtr-uniform gtr-50">
+						<div class="col-6"><a href="images/sales.png" target="_blank" class="image fit"><img src="images/sales.png" alt="" /></a></div>
+						<div class="col-6"><a href="images/orders.png" target="_blank" class="image fit"><img src="images/orders.png" alt="" /></a></div>
+					</div>
 				</div>
 			</section>
 
-		<!-- Four -->
+		<!-- Two -->
+			<section id="two" class="main style1 special">
+				<div class="container">
+				</div>
+			</section>
 
-			<section id="four" class="main style2 special">
+		<!-- Three -->
+			<section id="three" class="main style1">
+				<div class="container">
+					<div class="row gtr-150">
+						<div class="col-6 col-12-medium">
+							<h2>Data cleaning and transformation</h2>
+							<p>
+								Some text about it
+							</p>
+						</div>
+						<div class="col-6 col-12-medium imp-medium">
+							<span class="image"><img src="images/data_transform.png" alt="" /></span>
+						</div>
+					</div>
+				</div>
+			</section>
+		
+		<!-- Four -->
+			<section id="four" class="main style1">
+				<div class="container">
+					<div class="row gtr-150">
+						<div class="col-6 col-12-medium">
+							<span class="image fit"><img src="images/model.png" alt="" /></span>
+						</div>
+						<div class="col-6 col-12-medium imp-medium">
+							<h2>Semantic model design</h2>
+							<p>
+								Speaking of a quick introduction, I would say skilled Data Analyst 
+								from the Czech Republic with a passion 
+								(a bit overused cliché among freelancers but genuinely true in my case)
+								for Mathematics, Statistics, Modelling and adrenaline sports.
+							</p>
+						</div>
+					</div>
+				</div>
+			</section>
+		
+
+
+		<!-- Five -->
+
+			<section id="five" class="main style2 special">
 				<div class="container">
 				<header class="major">
 					<h2>Leave a word and Let's get to work!</h2>
