--- a/about_me.html
+++ b/about_me.html
@@ -30,7 +30,7 @@
 					</ul>
 					<div class="box alt">
 						<div class="row gtr-uniform gtr-50">
-							<div class="col-12"><a href="images/cv_full.png" target="_blank" class="image fit"><img src="images/cv_small.png" alt="" /></span></div>
+							<div class="col-12"><a href="images/cv_full.png" target="_blank" class="image fit"><img src="images/cv_small.png" alt="" /></a></div>
 						</div>
 					</div>
 					<ul class="icons" align="center">
