--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 					<p>A showcase of typical projects and example of delivered output.</p>
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
-							<h3>Power BI dashboard</h3>
+							<span class="image fit"><img src="images/sales.png" alt="" /></span>
+							<h3>Simple Power BI dashboard</h3>
 							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
 							<ul class="actions special">
 								<li><a href="project_power_bi.html" class="button">More</a></li>
