Minor correction of Power BI project

--- a/project_power_bi.html
+++ b/project_power_bi.html
@@ -28,10 +28,9 @@
 					<ul class="actions">
 						<li><a href="index.html#three" class="button">Back</a></li>
 					</ul>
-					<header class="major special">
+					<header class="major">
 						<h2>Global bike seller</h2>
 					</header>
-					<h3>Intro</h3>
 					<p>
 						This is a quick overview of an easy-to-understand dashboard created for 
 						a distributor of bikes and equipment. It displays plots and statistics 
@@ -61,7 +60,7 @@
 								It could be a database, Excel file, web service, or other platforms.
 								After selecting relevant columns and tables, exploration of the imported 
 								data follows  to understand its structure, relationships, and quality. 
-								This involves checking data types, identifying missing values, 
+								This involves checking data types, identifying missing values 
 								and understanding the distribution of data. Corrections are made at 
 								this stage to ensure optimal data quality for future loads.
 							</p>
