Add 4th project and description to all of them.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 								Speaking of a quick introduction, I would say skilled Data Analyst 
 								from the Czech Republic with a passion 
 								(a bit overused cliché among freelancers but genuinely true in my case)
-								for Mathematics, Statistics, Modelling and adrenaline sports.
+								for Mathematics, Statistics, Modeling and adrenaline sports.
 							</p>
 							<p>
 								Armed with Bachelor's and Master's degree, a fine collection of certificates and 
@@ -107,26 +107,42 @@
 					</header>
 					<p>A showcase of typical projects and example of delivered output.</p>
 					<div class="row gtr-150">
-						<div class="col-4 col-12-medium">
+						<div class="col-6 col-12-medium">
 							<span class="image fit"><img src="images/sales.png" alt="" /></span>
-							<h3>Simple Power BI dashboard</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<h3>Power BI dashboard</h3>
+							<p>All the way from integration of different data sources through design of semantic model to fine-tuned story-telling visuals.
+								Here you can find examples of elegant templates, all of them waiting to adopt your very own color palette.
+							</p>
 							<ul class="actions special">
 								<li><a href="project_power_bi.html" class="button">More</a></li>
 							</ul>
 						</div>
-						<div class="col-4 col-12-medium">
+						<div class="col-6 col-12-medium">
 							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
-							<h3>Basic data analysis</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<h3>Linear regression</h3>
+							<p>One of the building blocks of statistical modeling and great opportunity to demonstrate all parts included in 
+								the delivery of such project. See for yourself the attention to detail and quality of the output, all with a flavor of wine.
+							</p>
 							<ul class="actions special">
 								<li><a href="project_basic_analysis.html" class="button">More</a></li>
 							</ul>
 						</div>
-						<div class="col-4 col-12-medium">
+						<div class="col-6 col-12-medium">
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
 							<h3>Logistic regression</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<p>Most of my hands-on experience is from the banking sector, probability of default modeling to be precise.
+								Logistic regression is the European standard in this field and is used as a benchmark for other approaches as well.
+							</p>
+							<ul class="actions special">
+								<li><a href="project_logit.html" class="button">More</a></li>
+							</ul>
+						</div>
+						<div class="col-6 col-12-medium">
+							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+							<h3>Time series</h3>
+							<p>Time gives a new dimension to the data, brings new assumptions to verify and challenges to overcome.
+								Therefore, I believe it deserves its own showcase.
+							</p>
 							<ul class="actions special">
 								<li><a href="project_logit.html" class="button">More</a></li>
 							</ul>
