--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 						<div class="col-6 col-12-medium">
 							<span class="image fit"><img src="images/sales.png" alt="" /></span>
 							<h3>Power BI dashboard</h3>
-							<p>All the way from integration of different data sources through design of semantic model to fine-tuned story-telling visuals.
+							<p>All the way from an integration of different data sources through design of a semantic model to fine-tuned story-telling visuals.
 								Here you can find examples of elegant templates, all of them waiting to adopt your very own color palette.
 							</p>
 							<ul class="actions special">
