--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 					<p>A showcase of typical projects and example of delivered output.</p>
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
-							<span class="image fit"><img src="images/sales.png" alt="" /></span>
+							<span class="image fit"><a href="project_power_bi.html" target="_blank" class="image fit"><img src="images/sales.png" alt="" /></a></span>
 							<h3>Power BI dashboard</h3>
 							<p>All the way from an integration of different data sources through design of a semantic model to fine-tuned story-telling visuals.
 								Here you can find examples of elegant templates, all of them waiting to adopt your very own color palette.
