--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 					</header>
 					<p>A showcase of typical projects and example of delivered output.</p>
 					<div class="row gtr-150">
-						<div class="col-6 col-12-medium">
+						<div class="col-4 col-12-medium">
 							<span class="image fit"><a href="project_power_bi.html" target="_blank" class="image fit"><img src="images/sales.png" alt="" /></a></span>
 							<h3>Power BI dashboard</h3>
 							<p>All the way from an integration of different data sources through design of a semantic model to fine-tuned story-telling visuals.
@@ -117,31 +117,21 @@
 								<li><a href="project_power_bi.html" class="button">More</a></li>
 							</ul>
 						</div>
-						<div class="col-6 col-12-medium">
-							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><a href="project_lin_reg.html" target="_blank" class="image fit"><img src="images/pic03.jpg" alt="" /></a></span>
 							<h3>Linear regression</h3>
 							<p>One of the building blocks of statistical modeling and great opportunity to demonstrate all parts included in 
 								the delivery of such project. See for yourself the attention to detail and quality of the output, all with a flavor of wine.
 							</p>
 							<ul class="actions special">
-								<li><a href="project_basic_analysis.html" class="button">More</a></li>
+								<li><a href="project_lin_reg.html" class="button">More</a></li>
 							</ul>
 						</div>
-						<div class="col-6 col-12-medium">
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><a href="project_logit.html" target="_blank" class="image fit"><img src="images/pic04.jpg" alt="" /></a></span>
 							<h3>Logistic regression</h3>
 							<p>Most of my hands-on experience is from the banking sector, probability of default modeling to be precise.
 								Logistic regression is the European standard in this field and is used as a benchmark for other approaches as well.
-							</p>
-							<ul class="actions special">
-								<li><a href="project_logit.html" class="button">More</a></li>
-							</ul>
-						</div>
-						<div class="col-6 col-12-medium">
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<h3>Time series</h3>
-							<p>Time gives a new dimension to the data, brings new assumptions to verify and challenges to overcome.
-								Therefore, I believe it deserves its own showcase.
 							</p>
 							<ul class="actions special">
 								<li><a href="project_logit.html" class="button">More</a></li>
