Start adding trask

--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><a href="project_logit.html" target="_blank" class="image fit"><img src="images/pic04.jpg" alt="" /></a></span>
 							<h3>Logistic regression</h3>
-							<p>Most of my hands-on experience is from the banking sector, probability of default modeling to be precise.
-								Logistic regression is the European standard in this field and is used as a benchmark for other approaches as well.
+							<p>Most of my hands-on experience is from a banking sector where logistic regression represents European standard for modeling probability of default
+								and is used as a benchmark for other approaches as well. However, bank models cannot be published, so I will demonstrate it on a churn rate project.
 							</p>
 							<ul class="actions special">
 								<li><a href="project_logit.html" class="button">More</a></li>
@@ -173,7 +173,7 @@
 				</div>
 			</section>
 
-		<!--
+<!--
 			<section id="five" class="main style1">
 				<div class="container">
 					<header class="major special">
