--- a/project_power_bi.html
+++ b/project_power_bi.html
@@ -29,7 +29,7 @@
 						<li><a href="index.html#three" class="button">Back</a></li>
 					</ul>
 					<header class="major">
-						<h2>Global bike seller</h2>
+						<h2><b>Global bike seller</b></h2>
 					</header>
 					<p>
 						This is a quick overview of an easy-to-understand dashboard created for 
@@ -54,7 +54,7 @@
 				<div class="container">
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
-							<h3>Data cleaning and transformation</h3>
+							<h3><b>Data cleaning and transformation</b></h3>
 							<p>
 								The work starts by connecting to a data source. 
 								It could be a database, Excel file, web service, or other platforms.
@@ -84,7 +84,7 @@
 							<div class="col-6"><a href="images/model.png" target="_blank" class="image fit"><img src="images/model.png" alt="" /></a></div>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
-							<h3>Semantic model design</h3>
+							<h3><b>Semantic model design</b></h3>
 							<p>
 								Power BI relies on accurate information about table 
 								relationships to ensure the seamless functioning of 
