Finish first version of websites

--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
 					<header class="major">
 						<h2>Portfolio</h2>
 					</header>
-					<p>A showcase of typical projects and example of delivered output.</p>
+					<p>A showcase of typical projects.</p>
 					<div class="row gtr-150">
-						<div class="col-4 col-12-medium">
+						<div class="col-6 col-12-medium">
 							<span class="image fit"><a href="project_power_bi.html" target="_blank" class="image fit"><img src="images/sales.png" alt="" /></a></span>
 							<h3>Power BI dashboard</h3>
 							<p>All the way from an integration of different data sources through design of a semantic model to fine-tuned story-telling visuals.
@@ -117,6 +117,7 @@
 								<li><a href="project_power_bi.html" class="button">More</a></li>
 							</ul>
 						</div>
+						<!--
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><a href="project_lin_reg.html" target="_blank" class="image fit"><img src="images/pic03.jpg" alt="" /></a></span>
 							<h3>Linear regression</h3>
@@ -127,8 +128,9 @@
 								<li><a href="project_lin_reg.html" class="button">More</a></li>
 							</ul>
 						</div>
-						<div class="col-4 col-12-medium">
-							<span class="image fit"><a href="project_logit.html" target="_blank" class="image fit"><img src="images/pic04.jpg" alt="" /></a></span>
+						-->
+						<div class="col-6 col-12-medium">
+							<span class="image fit"><a href="project_logit.html" target="_blank" class="image fit"><img src="images/logit_logo.png" alt="" /></a></span>
 							<h3>Logistic regression</h3>
 							<p>Most of my hands-on experience is from a banking sector where logistic regression represents European standard for modeling probability of default
 								and is used as a benchmark for other approaches as well. However, bank models cannot be published, so I will demonstrate it on a churn rate project.
@@ -173,7 +175,7 @@
 				</div>
 			</section>
 
-<!--
+			<!--
 			<section id="five" class="main style1">
 				<div class="container">
 					<header class="major special">
